# VotingSystem

./: README.md  package-lock.json
backend/: CMakeLists.txt
backend/src/: main.cpp
frontend/: package-lock.json  package.json
frontend/voting-system/: package-lock.json  package.json
frontend/voting-system/public/: index.html
frontend/voting-system/src/: App.js  config.js
frontend/voting-system/src/api/: client.js
frontend/voting-system/src/components/: AdminPage.jsx  LoginPage.jsx  RegisterPage.jsx  VotingPage.jsx  VotingSystemLandingPage.jsx
